# agenta

./: .gitignore  AGENTS.md  vulnerabilities.md
.github/workflows/: 01-create-release-branch.yml  06-railway-preview-build.yml  07-railway-preview-deploy.yml  08-railway-preview-cleanup.yml  09-update-api-docs.yml  11-check-code-styling.yml  12-check-unit-tests.yml  32-generate-demo-traces.yml  33-update-api-docs.yml  42-railway-build.yml  44-railway-tests.yml
api/: check_deps.py  pyproject.toml
api/ee/docker/: Dockerfile.dev  Dockerfile.gh
api/ee/src/: main.py
api/entrypoints/: routers.py
api/oss/docker/: Dockerfile.dev  Dockerfile.gh
clients/python/: pyproject.toml
clients/python/agenta_client/: __init__.py  client.py
clients/scripts/: generate.sh
docs/: package-lock.json  package.json  pnpm-lock.yaml
docs/design/align-evaluator-interface/: status.md
docs/design/cleanup-evaluators-endpoints/: migration-plan.md
docs/design/jinja2-ssti-remediation/: README.md  context.md  plan.md  research.md  status.md
docs/openapi-cleanup/: README.md  api_routers_and_endpoints.md  endpoints.md  generate.py  tracing-cleanup.md
docs/packs/: hosting.md
sdk/: pyproject.toml
sdks/python/: pyproject.toml
services/: pyproject.toml
services/ee/docker/: Dockerfile.dev  Dockerfile.gh
services/oss/docker/: Dockerfile.dev  Dockerfile.gh
services/oss/tests/pytest/acceptance/: test_managed_workflow_lifecycle.py
web/: package.json  pnpm-lock.yaml
web/_reference/: README.md
web/ee/: package.json
web/oss/: package.json
web/tests/: package.json
(+682 files in other folders)
